--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 135,
    "id": "3bb73f55",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e1df7a74",
    "metadata": {},
    "outputs": [],
@@ -58,12 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 154,
    "id": "37a057df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo = ZumoTarget(\"/dev/cu.usbserial-A9SCLUOH\", 115200, filtered=[MSG_ID.HEARTBEAT_MSG])"
+    "zumo = ZumoTarget(\"/dev/cu.usbserial-A9SCLUOH\", 115200, filtered=[MSG_ID.HEARTBEAT_MSG])\n",
+    "zumo.drive_enable()"
    ]
   },
   {
@@ -80,63 +81,65 @@
    "id": "e2d24c2d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "zumo.drive_enable()\n",
-    "zumo.dispatch(2,6,0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 155,
    "id": "dc365f64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo.drive_enable()\n",
     "zumo.dispatch(2,4,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 158,
+   "id": "66b99fee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zumo.dispatch(2,4,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "id": "888df10d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo.drive_enable()\n",
     "zumo.dispatch(2,2,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 157,
    "id": "f511cfa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo.drive_enable()\n",
     "zumo.dispatch(2,2,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 149,
    "id": "480a3fe9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo.drive_enable()\n",
     "zumo.dispatch(1,1,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 148,
    "id": "d15494fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo.drive_enable()\n",
     "zumo.dispatch(1,1,1)"
    ]
   },
