--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "3bb73f55",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "e1df7a74",
    "metadata": {},
    "outputs": [],
@@ -47,9 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# zumo.set_pid(0.00018, 0.00001, 0.0065, 1500.0)\n",
     "zumo.set_pid(0.0004, 0.000015, 0.0007, 800.0)\n",
     "\n",
@@ -58,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 32,
    "id": "37a057df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo = ZumoTarget(\"/dev/cu.usbserial-A9SCLUOH\", 115200, filtered=[MSG_ID.HEARTBEAT_MSG])\n",
+    "zumo = ZumoTarget(\"/dev/cu.usbserial-00000000\", 115200, filtered=[MSG_ID.HEARTBEAT_MSG])\n",
     "zumo.drive_enable()"
    ]
   },
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 40,
    "id": "dc365f64",
    "metadata": {},
    "outputs": [],
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 41,
    "id": "66b99fee",
    "metadata": {},
    "outputs": [],
@@ -105,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 42,
    "id": "888df10d",
    "metadata": {},
    "outputs": [],
@@ -125,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 43,
    "id": "480a3fe9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zumo.dispatch(1,1,0)"
+    "zumo.dispatch(1,3,0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 39,
    "id": "d15494fc",
    "metadata": {},
    "outputs": [],
